--- a/index.html
+++ b/index.html
@@ -3,11 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <title>Cek API BMKG</title>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 20px; }
+    table { border-collapse: collapse; width: 100%; margin-top: 20px; }
+    th, td { border: 1px solid #999; padding: 8px; text-align: center; }
+    th { background: #eee; }
+    pre { background: #f9f9f9; padding: 10px; border: 1px solid #ddd; max-height: 300px; overflow-y: scroll; }
+  </style>
 </head>
 <body>
   <h2>Data dari API BMKG</h2>
   <button onclick="loadBMKG()">Ambil Data</button>
+
+  <h3>JSON Mentah:</h3>
   <pre id="output">Klik tombol di atas untuk ambil data...</pre>
+
+  <h3>Prakiraan (Tabel Ringkas):</h3>
+  <table id="forecastTable">
+    <thead>
+      <tr>
+        <th>Waktu</th>
+        <th>Suhu (°C)</th>
+        <th>Kelembapan (%)</th>
+        <th>Cuaca</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
 
   <script>
     async function loadBMKG() {
@@ -15,7 +37,27 @@
       try {
         const res = await fetch(url);
         const data = await res.json();
+
+        // tampilkan json mentah
         document.getElementById("output").textContent = JSON.stringify(data, null, 2);
+
+        // ambil tabel
+        const tbody = document.querySelector("#forecastTable tbody");
+        tbody.innerHTML = "";
+
+        if (data.data && data.data[0] && data.data[0].cuaca) {
+          data.data[0].cuaca.forEach(item => {
+            const row = document.createElement("tr");
+            row.innerHTML = `
+              <td>${item.local_datetime}</td>
+              <td>${item.t} </td>
+              <td>${item.hu} </td>
+              <td>${item.weather_desc}</td>
+            `;
+            tbody.appendChild(row);
+          });
+        }
+
       } catch (err) {
         document.getElementById("output").textContent = "Error: " + err;
       }
