--- a/index.html
+++ b/index.html
@@ -1,5 +1,25 @@
 <h3>Cek Data Prakiraan BMKG</h3>
-<input type="text" id="kodeAdm4" placeholder="Masukkan kode adm4">
+
+<label for="wilayah">Pilih Wilayah:</label>
+<select id="wilayah">
+  <option value="">-- pilih --</option>
+  <option value="3374010">Kota Yogyakarta</option>
+  <option value="3404010">Kab. Sleman</option>
+  <option value="3402020">Kab. Bantul</option>
+  <option value="3403010">Kab. Gunungkidul</option>
+  <option value="3405010">Kab. Kulon Progo</option>
+  <option value="3307010">Kab. Purworejo</option>
+  <option value="3309010">Kab. Kebumen</option>
+  <option value="3302010">Kab. Cilacap</option>
+  <option value="3302020">Kab. Banyumas</option>
+  <option value="3302030">Kab. Purbalingga</option>
+  <option value="3302040">Kab. Banjarnegara</option>
+  <option value="3302050">Kab. Wonosobo</option>
+  <option value="3302060">Kab. Temanggung</option>
+  <option value="3302070">Kab. Magelang</option>
+  <option value="3375010">Kota Magelang</option>
+</select>
+
 <button id="btnLoad">Tampilkan</button>
 
 <h4>Data Mentah JSON</h4>
