--- a/index.html
+++ b/index.html
@@ -1,88 +1,129 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Cek API BMKG</title>
+  <title>Prakiraan Cuaca BMKG</title>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    body { font-family: Arial, sans-serif; margin: 20px; }
-    table { border-collapse: collapse; width: 100%; margin-top: 20px; }
-    th, td { border: 1px solid #999; padding: 8px; text-align: center; }
-    th { background: #eee; }
-    pre { background: #f9f9f9; padding: 10px; border: 1px solid #ddd; max-height: 300px; overflow-y: scroll; }
-    label { font-weight: bold; }
+    body { font-family: Arial, sans-serif; padding: 20px; }
+    table { border-collapse: collapse; margin-top: 15px; width: 100%; }
+    th, td { border: 1px solid #ccc; padding: 8px; text-align: center; }
+    th { background: #f0f0f0; }
+    #chartContainer { margin-top: 30px; }
+    .input-box { margin-bottom: 15px; }
   </style>
 </head>
 <body>
-  <h2>Data dari API BMKG</h2>
+  <h2>Prakiraan Cuaca BMKG</h2>
 
-  <label for="adm4">Masukkan Kode ADM4:</label>
-  <input type="text" id="adm4" value="31.71.01.1001" size="20">
-  <button onclick="loadBMKG()">Ambil Data</button>
+  <div class="input-box">
+    <label for="adm4">Kode ADM4:</label>
+    <input type="text" id="adm4" value="31.71.01.1001" size="20">
+    <button onclick="loadForecast()">Load Data</button>
+  </div>
 
-  <h3>JSON Mentah:</h3>
-  <pre id="output">Klik tombol di atas untuk ambil data...</pre>
+  <div id="forecastTable"></div>
 
-  <h3>Prakiraan (Tabel Ringkas):</h3>
-  <table id="forecastTable">
-    <thead>
-      <tr>
-        <th>Waktu</th>
-        <th>Suhu (°C)</th>
-        <th>Kelembapan (%)</th>
-        <th>Cuaca</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+  <div id="chartContainer">
+    <canvas id="tempChart" height="120"></canvas>
+    <canvas id="humChart" height="120"></canvas>
+  </div>
+
+  <pre id="rawData" style="background:#f9f9f9; padding:10px; margin-top:20px; max-height:300px; overflow:auto;"></pre>
 
   <script>
-    async function loadForecast(adm4) {
-    const url = `https://api.bmkg.go.id/publik/prakiraan-cuaca?adm4=${adm4}`;
-    const res = await fetch(url);
-    const json = await res.json();
+    async function loadForecast() {
+      const adm4 = document.getElementById("adm4").value.trim();
+      const url = `https://api.bmkg.go.id/publik/prakiraan-cuaca?adm4=${adm4}`;
 
-    document.getElementById("rawData").textContent = JSON.stringify(json, null, 2);
+      try {
+        const res = await fetch(url);
+        const json = await res.json();
 
-    const data = json.data?.[0]?.cuaca;
-    if (!data) {
-        document.getElementById("forecastTable").innerHTML = "<p>Tidak ada data prakiraan.</p>";
-        return;
+        document.getElementById("rawData").textContent = JSON.stringify(json, null, 2);
+
+        const data = json.data?.[0]?.cuaca;
+        if (!data) {
+          document.getElementById("forecastTable").innerHTML = "<p>Tidak ada data prakiraan.</p>";
+          return;
+        }
+
+        // Flatten array cuaca
+        const flatData = data.flat();
+
+        // ===== Tabel Cuaca =====
+        let html = `
+          <table>
+            <thead>
+              <tr>
+                <th>Waktu Lokal</th>
+                <th>Suhu (°C)</th>
+                <th>Kelembapan (%)</th>
+                <th>Cuaca</th>
+                <th>Icon</th>
+              </tr>
+            </thead>
+            <tbody>
+        `;
+
+        flatData.forEach(item => {
+          html += `
+            <tr>
+              <td>${item.local_datetime}</td>
+              <td>${item.t}</td>
+              <td>${item.hu}</td>
+              <td>${item.weather_desc}</td>
+              <td><img src="${item.image}" width="40"></td>
+            </tr>
+          `;
+        });
+
+        html += "</tbody></table>";
+        document.getElementById("forecastTable").innerHTML = html;
+
+        // ===== Grafik Suhu & Kelembapan =====
+        const labels = flatData.map(d => d.local_datetime);
+        const suhu = flatData.map(d => d.t);
+        const hum = flatData.map(d => d.hu);
+
+        renderChart("tempChart", "Suhu (°C)", labels, suhu, "rgba(255,99,132,0.7)");
+        renderChart("humChart", "Kelembapan (%)", labels, hum, "rgba(54,162,235,0.7)");
+
+      } catch (err) {
+        console.error(err);
+        document.getElementById("forecastTable").innerHTML = "<p>Error mengambil data.</p>";
+      }
     }
 
-    // Flatten array (gabung semua list prakiraan jadi satu array)
-    const flatData = data.flat();
+    let chartInstances = {};
+    function renderChart(canvasId, label, labels, data, color) {
+      if (chartInstances[canvasId]) chartInstances[canvasId].destroy();
 
-    // bikin tabel
-    let html = `
-      <table border="1" cellspacing="0" cellpadding="5">
-        <thead>
-          <tr>
-            <th>Waktu Lokal</th>
-            <th>Suhu (°C)</th>
-            <th>Kelembapan (%)</th>
-            <th>Cuaca</th>
-            <th>Gambar</th>
-          </tr>
-        </thead>
-        <tbody>
-    `;
+      const ctx = document.getElementById(canvasId).getContext("2d");
+      chartInstances[canvasId] = new Chart(ctx, {
+        type: "line",
+        data: {
+          labels: labels,
+          datasets: [{
+            label: label,
+            data: data,
+            borderColor: color,
+            backgroundColor: color,
+            fill: false,
+            tension: 0.3
+          }]
+        },
+        options: {
+          responsive: true,
+          scales: {
+            x: { ticks: { maxRotation: 90, minRotation: 45 } }
+          }
+        }
+      });
+    }
 
-    flatData.forEach(item => {
-        html += `
-          <tr>
-            <td>${item.local_datetime}</td>
-            <td>${item.t}</td>
-            <td>${item.hu}</td>
-            <td>${item.weather_desc}</td>
-            <td><img src="${item.image}" width="40"></td>
-          </tr>
-        `;
-    });
-
-    html += "</tbody></table>";
-    document.getElementById("forecastTable").innerHTML = html;
-}
-
+    // load pertama kali
+    loadForecast();
   </script>
 </body>
 </html>
