--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     #chartContainer { margin-top: 30px; }
     .input-box { margin-bottom: 15px; }
     #meta { margin: 15px 0; padding: 10px; background: #eef; border-radius: 6px; }
+    #titleArea { margin-top:20px; font-size:18px; font-weight:bold; }
   </style>
 </head>
 <body>
@@ -19,12 +20,13 @@
 
   <div class="input-box">
     <label for="adm4">Kode ADM4:</label>
-    <input type="text" id="adm4" value="31.71.01.1001" size="20">
+    <input type="text" id="adm4" value="34.02.07.2001" size="20">
     <button onclick="loadForecast()">Load Data</button>
   </div>
 
   <!-- metadata wilayah -->
   <div id="meta"></div>
+  <div id="titleArea"></div>
 
   <div id="forecastTable"></div>
 
@@ -44,21 +46,34 @@
         const res = await fetch(url);
         const json = await res.json();
 
+        // tampilkan JSON mentah buat debug
         document.getElementById("rawData").textContent = JSON.stringify(json, null, 2);
 
-        const wilayah = json.data?.[0];
+        const wilayah = json.data?.[0];  // ambil data pertama
         const data = wilayah?.cuaca;
 
-        // ===== Metadata Wilayah =====
+        console.log("Wilayah:", wilayah); // DEBUG ke console
+
+        // ===== Metadata Wilayah (fix field) =====
         if (wilayah) {
+          const prov = wilayah.provinsi || "-";
+          const kotkab = wilayah.kotkab || "-";
+          const kec = wilayah.kecamatan || "-";
+          const desa = wilayah.desa || "-";
+
           document.getElementById("meta").innerHTML = `
-            <b>Provinsi:</b> ${wilayah.provinsi || "-"} <br>
-            <b>Kabupaten/Kota:</b> ${wilayah.kotkab || "-"} <br>
-            <b>Kecamatan:</b> ${wilayah.kecamatan || "-"} <br>
-            <b>Kelurahan:</b> ${wilayah.desa || "-"}
+            <b>Provinsi:</b> ${prov} <br>
+            <b>Kabupaten/Kota:</b> ${kotkab} <br>
+            <b>Kecamatan:</b> ${kec} <br>
+            <b>Desa/Kelurahan:</b> ${desa}
           `;
+
+          // judul otomatis
+          document.getElementById("titleArea").innerHTML = 
+            `Prakiraan Cuaca untuk ${desa}, ${kec}, ${kotkab}`;
         } else {
           document.getElementById("meta").innerHTML = "<p>Data wilayah tidak tersedia.</p>";
+          document.getElementById("titleArea").innerHTML = "";
         }
 
         if (!data) {
