--- a/index.html
+++ b/index.html
@@ -72,4 +72,97 @@
           <th>Jam</th>
           <th>Cuaca</th>
           <th>Suhu (°C)</th>
-          <th>Kelembapan
+          <th>Kelembapan (%)</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+
+    <!-- Chart di kanan -->
+    <div id="chartContainer">
+      <canvas id="weatherChart"></canvas>
+    </div>
+  </div>
+
+  <script>
+    let weatherChart; // simpan chart agar bisa dihapus kalau reload
+
+    async function loadWeather() {
+      const kodeADM4 = document.getElementById("adm4").value;
+      const url = `https://api.bmkg.go.id/publik/prakiraan-cuaca?adm4=${kodeADM4}`;
+      const res = await fetch(url);
+      const data = await res.json();
+
+      // tampilkan lokasi
+      const lokasi = data.lokasi;
+      document.getElementById("lokasiInfo").innerHTML = `
+        <strong>Provinsi:</strong> ${lokasi.provinsi} | 
+        <strong>Kab/Kota:</strong> ${lokasi.kotkab} | 
+        <strong>Kecamatan:</strong> ${lokasi.kecamatan} | 
+        <strong>Kelurahan:</strong> ${lokasi.desa}
+      `;
+
+      // isi tabel
+      const tbody = document.querySelector("#weatherTable tbody");
+      tbody.innerHTML = "";
+      const times = [];
+      const temps = [];
+      const hums = [];
+      data.data[0].cuaca.forEach(item => {
+        const jam = new Date(item.local_datetime).toLocaleTimeString("id-ID", {hour: "2-digit", minute:"2-digit"});
+        tbody.innerHTML += `
+          <tr>
+            <td>${jam}</td>
+            <td>${item.weather_desc}</td>
+            <td>${item.t}°C</td>
+            <td>${item.hu}%</td>
+          </tr>
+        `;
+        times.push(jam);
+        temps.push(item.t);
+        hums.push(item.hu);
+      });
+
+      // hapus chart lama kalau ada
+      if (weatherChart) {
+        weatherChart.destroy();
+      }
+
+      // chart
+      const ctx = document.getElementById("weatherChart").getContext("2d");
+      weatherChart = new Chart(ctx, {
+        type: "line",
+        data: {
+          labels: times,
+          datasets: [
+            {
+              label: "Suhu (°C)",
+              data: temps,
+              borderColor: "red",
+              backgroundColor: "rgba(255,0,0,0.2)",
+              tension: 0.3
+            },
+            {
+              label: "Kelembapan (%)",
+              data: hums,
+              borderColor: "blue",
+              backgroundColor: "rgba(0,0,255,0.2)",
+              tension: 0.3
+            }
+          ]
+        },
+        options: {
+          responsive: true,
+          plugins: {
+            legend: { position: "bottom" }
+          }
+        }
+      });
+    }
+
+    // auto load pertama kali
+    loadWeather();
+  </script>
+
+</body>
+</html>
